<resources>
    <string name="m_app_name">Magazinok</string>
    <string name="facebook_app_id">secret</string>
    <string name="m_app_version">Alkalmazás verzió:</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Beállítások</string>
    <string name="menu_all_articles">Összes Cikk</string>
    <string name="menu_topics">Témák</string>
    <string name="menu_brands">Márkák</string>
    <string name="menu_my_magazine">Követéseim</string>
    <string name="topics">Témák</string>
    <string name="brands">Márkák</string>
    <string name="download_button_text">Letöltés</string>
    <string name="menu_all_issues">Magazinok</string>
    <string name="issues">Magazinok</string>
    <string name="add_new_issue">Új magazin\nhozzáadása</string>
    <string name="download_magazine_button_text">Magazin letöltése</string>
    <string name="open_magazine_button">Magazin megnyitása</string>
    <string name="download_in_progress">Letöltés folyamatban</string>
    <string name="magazine_download_failed_message">A %1$s magazin letöltése sikertelen.\n\nSzeretnéd megpróbálni újra?</string>
    <string name="magazine_download_new_version_title">Magazin frissítése</string>
    <string name="magazine_download_new_version_message">A %1$s magazin frissebb verziója elérhető.\n\nSzeretnéd letölteni?</string>
    <string name="error">Hiba!</string>
    <string name="login_failed">Bejelentkezés sikertelen. Megpróbálod újra?</string>
    <string name="download_failed">Letöltés sikertelen</string>
    <string name="cancel">Mégse</string>
    <string name="ok">Ok</string>
    <string name="recommendations">Ajánló</string>
    <string name="offline_message">Hajaj, úgy tűnik az eszköz nem kapcsolódik az internetre.</string>
    <string name="no_content">Nincs megjeleníthető tartalom.</string>
    <string name="open_button">Megnyitás</string>
    <string name="size_format">%1$d MB</string>
    <string name="non_existing_page">A kért oldal nem található.</string>
    <string name="download_magazine_to_open_article">Ha szeretnéd elolvasni a cikket, kérlek töltsd le a magazint.</string>
    <string name="in_progress">Letöltés…</string>
    <string name="storage_permission_rationale_dialog_title">Háttértár hozzáférés jogosultság megtagadva</string>
    <string name="storage_permission_rationale_dialog_message">"Az alkalmazás számára szükséges a hozzáférés a háttértárhoz az offline tartalmak letöltéséhez és megnyitásához. A jogosultság engedélyezése nélkül az alkalmazás nem fogja elérni a offline tartalmakat.\n\nSzeretnéd engedélyezni a hozzáférést a háttértárhoz? "</string>
    <string name="impress_title">Impresszum</string>
    <string name="gallery_pages">" / %1$d"</string>
    <string name="source">Forrás: %1$s</string>
    <string name="test_size">867 MB</string>
    <string name="test_date">2016. április</string>
    <string name="tab_name_all_topics">Mind</string>
    <string name="hours_ago">%1$d órája</string>
    <string name="minutes_ago">%1$d perce</string>
    <string name="loading_more">Továbbiak letöltése …</string>
    <string name="error_opening_magazine">A magazin megnyitása sikertelen.</string>
    <string name="open_magazine_dialog_title">Magazin megnyitása</string>
    <string name="open_magazine_dialog_message">Milyen formátumban szeretnéd megnyitni a magazint?</string>
    <string name="pdf">PDF</string>
    <string name="mobile_friendly">Mobil nézet</string>
    <string name="open_mobile_button_text">Mobil magazin olvasása</string>
    <string name="open_pdf_button_text">PDF magazin olvasása</string>
    <string name="unpacking">Kicsomagolás…</string>
    <string name="delete_button_text">Törlés</string>
    <string name="developed_by">Fejlesztette</string>
    <string name="start_title">A személyre szabott magazinod</string>
    <string name="login">Bejelentkezés</string>
    <string name="start_text">Válassz témákat a legjobb\nmagazin márkákból és olvasd\na teljesen egyedi magazinod</string>
    <string name="fb_login_button_text">Belépés Facebookkal</string>
    <string name="forgot_password">Elfelejtett jelszó?</string>
    <string name="login2">Belépés</string>
    <string name="register">Regisztráció</string>
    <string name="email">E-mail</string>
    <string name="password">Jelszó</string>
    <string name="name">Név</string>
    <string name="password_again">Jelszó mégegyszer</string>
    <string name="gender">Nem</string>
    <string name="date_of_birth">Születési dátum</string>
    <string name="register_gender_title">Kérlek válaszd ki a nemed!</string>
    <string-array name="genders_array">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>
    <string name="female">Nő</string>
    <string name="male">Férfi</string>
    <string name="name_hint_required">Név *</string>
    <string name="email_hint_required">E-mail *</string>
    <string name="password_hint_required">Jelszó *</string>
    <string name="password_again_hint_required">Jelszó mégegyszer *</string>
    <string name="not_registered_text">Nincs még felhasználója?</string>
    <string name="required_fields">A *-gal jelölt mezők kitöltése kötelező</string>
    <string name="forgot_password_text">Add meg a regisztrált e-mail címed, és mi küldjük rá egy ideiglenes jelszót, amivel be tudsz lépni, majd beállítani egy újat.</string>
    <string name="send_password">Jelszó küldése</string>
    <string name="modify">Módosítás</string>
    <string name="follow_count">%1$d Követés</string>
    <string name="sign_out">Kijelentkezés</string>
    <string name="input_error_username">Nem megfelelő e-mail formátum</string>
    <string name="input_error_empty">A mező nem lehet üres!</string>
    <string name="unknown_error">Ismeretlen hiba.</string>
    <string name="login_error_title">Bejelentkezési hiba</string>
    <string name="unauthorized_error_message">Nem megfelelő felhasználónév vagy jelszó.</string>
    <string name="profile">Profil</string>
    <string name="out_of_memory_error_message">Úgy tűnik elfogyott az alkamazás rendelkezésére álló memória.</string>
    <string name="client_version_unsupported_title">Frissítés</string>
    <string name="client_version_unsupported_message">Az alkalmazás friss verziója elérhető a Play Store-ból. A frissítés nélkül az alkamazás nem fog megfelelően működni.</string>
    <string name="client_version_deprecated_title" >Frissítés</string>
    <string name="client_version_deprecated_message">Az alkalmazás friss verziója elérhető a Play Store-ból. Szeretnéd letölteni?</string>
    <string name="facebook_login_error">Sikertelen bejelentkezés a Facebookon keresztül.</string>
    <string name="password_no_match">A megadott jelszavak nem egyeznek.</string>
    <string name="password_too_short">A jelszónak legalább 8 karakter hosszúnak kell lennie.</string>
    <string name="register_error_title">Regisztrációs hiba</string>
    <string name="modify_user_error_title">Hiba adatmódosítás közben</string>
    <string name="password_modify_hint">Új jelszó beállítása</string>
    <string name="password_modify_again_hint">Új jelszó mégegyszer</string>
    <string name="modify_user_success">A profil adatok sikeresen elmentve.</string>
    <string name="new_password_sent_message">Ideiglenes jelszavad elküldtük a megadott e-mail címre (%1$s). Lépj be vele 15 percen belül, majd változtasd meg!</string>
    <string name="alert">Figyelem</string>
    <string name="not_registered_email">A megadott e-mail címmel (%1$s) nem található felhasználó.</string>
    <string name="test_username">Slartibartfast</string>
    <string name="test_email">k@k.k</string>
    <string name="test_password">12345678</string>
    <string name="test_brand">Men\'s Health</string>
    <string name="follow">Követés</string>
    <string name="followed">Követve</string>
    <string name="my_topics">Témáim</string>
    <string name="my_brands">Márkáim</string>
    <string name="menu_favorites">Cikkeim</string>
    <string name="article_removed">Sikeresen eltávolítottad a cikket.</string>
    <string name="undo">Visszavonás</string>
    <string name="follow_topic">Téma követése</string>
    <string name="follow_brand">Márka követése</string>
    <string name="save_articles">Cikkek hozzáadása</string>
    <string name="follow_stuff">Témák vagy márkák követése</string>
    <string name="menu_fb_video_list">360º videók</string>
    <string name="fb_app_missing_message_360">A 360º-os videók megtekintéséhez a Facebook app szükséges. Szeretnéd telepíteni?</string>
    <string name="fb_app_missing_message">A link megtekintéséhez a Facebook app szükséges. Szeretnéd telepíteni?</string>
    <string name="separator">" | " </string>
    <string name="enable_push">Push értesítések engedélyezése</string>
</resources>