<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.SettingsActivity_">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/app_bar_layout"
                android:background="@color/mWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="top"
                    android:layout_margin="@dimen/default_margin"
                    >

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint_required"
                        style="@style/modify_user_edittext_style"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint_required"
                        style="@style/modify_user_edittext_style"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_modify_hint"
                        style="@style/modify_user_edittext_style"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/password_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_modify_again_hint"
                        style="@style/modify_user_edittext_style"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        style="@style/modify_user_edittext_style"
                        />

                    <TextView
                        android:id="@+id/date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        style="@style/modify_user_edittext_style"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/push_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_push"
                            android:clickable="false"
                            android:focusableInTouchMode="false"
                            android:focusable="false"
                            style="@style/modify_user_edittext_style"
                            />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/push_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            app:theme="@style/switch_style"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/required_fields"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/spacing_medium"
                        style="@style/text_start_login_grey"/>

                    <TextView
                        android:id="@+id/modify_button"
                        style="@style/modify_user_edittext_style"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:text="@string/modify"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="false"
                        />

                    <TextView
                        android:id="@+id/sign_out_button"
                        style="@style/modify_user_edittext_style"
                        android:layout_width="match_parent"
                        android:text="@string/sign_out"
                        android:clickable="true"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="false"
                        />

                </LinearLayout>

            </ScrollView>

            <include layout="@layout/inc_appbar_layout" />

        </RelativeLayout>

        <com.onceapps.m.ui.widgets.LoadingLayout_
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/inc_navigation_content" />

</android.support.v4.widget.DrawerLayout>