<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.BaseActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg_dark" />

            <include
                android:id="@id/app_bar_layout"
                layout="@layout/inc_appbar_login_layout" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/app_bar_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint_required"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/email"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint_required"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint_required"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/password_again"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_again_hint_required"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/gender"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/gender" />

                    <TextView
                        android:id="@+id/date_of_birth"
                        style="@style/login_edittext_style"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/date_of_birth" />

                    <TextView
                        style="@style/text_start_login_grey"
                        android:layout_width="@dimen/edittext_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/spacing_medium"
                        android:text="@string/required_fields" />

                    <Button
                        android:id="@+id/register_button"
                        style="@style/button_style"
                        android:layout_width="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:text="@string/register" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <com.onceapps.m.ui.widgets.LoadingLayout_
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>