<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.BaseActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/inc_appbar_layout_fixed" />

        <RelativeLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingTop="@dimen/default_margin"
            android:background="@color/mGrey12">

            <Button
                android:id="@+id/download_button"
                style="@style/button_style_filled_white"
                android:layout_width="@dimen/button_width"
                android:layout_centerHorizontal="true"
                android:text="@string/download_magazine_button_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_below="@id/download_button"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/date"
                    style="@style/text_magazine_preview_date_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/test_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separator"
                    />

                <TextView
                    android:id="@+id/size"
                    style="@style/text_magazine_preview_size_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/test_size" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/inc_navigation_content" />

</android.support.v4.widget.DrawerLayout>