<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activites.BaseActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/app_bar_layout"
                android:layout_margin="@dimen/spacing_xlarge"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/text_start_login_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/forgot_password_text" />

                <EditText
                    android:id="@+id/email"
                    style="@style/login_edittext_style"
                    android:layout_width="@dimen/edittext_width"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/send_password_button"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_password" />

            </LinearLayout>

            <include layout="@layout/inc_appbar_login_layout" />

        </RelativeLayout>

        <com.onceapps.m.ui.widgets.LoadingLayout_
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>